# pilar-core

./: .gitignore  Cargo.toml  How_sharding_works.md  LICENSE  ManifoldTest.md  README.md  Thesis.md  mainfold_test_results.md  pilar.toml
src/: embed.rs  enrich.rs  geometry.rs  ingest.rs  km.rs  lib.rs  main.rs  ner.rs  pilar.toml  pipeline.rs  placement.rs  sharding.rs  tfidf.rs  types.rs
