[package]
name = "pilar-core"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = "0.33"
rand = "0.8"
rand_distr = "0.4"
rake = "0.3"
stop-words = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[[bin]]
name = "infer"
path = "src/bin/infer.rs"
